--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,1 +1,14 @@
 body { padding-top: 50px; }
+
+.headshot {
+	width:100%;
+}
+
+.underline {
+	text-decoration:none;
+	border-bottom:2px solid;
+}
+
+.headerIcon {
+	height:100%;
+}
