--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -41,3 +41,17 @@
 .shadow {
 	box-shadow: 10px 10px grey;
 }
+
+.projectRow {
+	max-height:300px;
+}
+
+.otherProjectDescription {
+	padding-top:50px;
+}
+
+.projectPicture {
+	max-height:300px;
+	max-width:300px;
+	height:100%;
+}
